<resources>
    <string name="app_name">MyHome</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_right_drawer">Right Drawer</string>
    <string name="water">Water</string>
    <string name="electricity">Electricity</string>
    <string name="plant">Plant</string>
    <string name="unlock">Unlock</string>
    <string name="confirm_pattern">Confirm your screen lock PIN , Pattern or Password</string>
    <string name="unlock_failed">Failed to Unlock the app.</string>
    <string name="security_device_cancelled">Device is not secure or user cancel the request.</string>

    <string name="privacypolicy">Privacy Policy</string>
    <string name="i1">NARENDER KESWANI built the MyHome app as a Commercial app. This SERVICE is provided by NARENDER KESWANI and is intended for use as is.

This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.

If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.

The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at MyHome unless otherwise defined in this Privacy Policy.</string>
    <string name="l2">Information Collection and Use</string>
    <string name="i2">For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.

The app does use third party services that may collect information used to identify you.

Link to privacy policy of third party service providers used by the app

Google Play Services
AdMob
Google Analytics for Firebase
Firebase Crashlytics
Facebook
Fabric</string>
    <string name="l3">Log Data</string>
    <string name="i3">I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.</string>
    <string name="l4">Cookies</string>
    <string name="i4">Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device internal memory.
This Service does not use these cookies explicitly. However, the app may use third party code and libraries that use cookies to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.</string>
    <string name="l5">Service Providers</string>
    <string name="i5">I may employ third-party companies and individuals due to the following reasons:

To facilitate our Service;
To provide the Service on our behalf;
To perform Service-related services; or
To assist us in analyzing how our Service is used.
I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</string>
    <string name="l6">Security</string>
    <string name="i6">I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.</string>
    <string name="l7">Links to Other Sites</string>
    <string name="i7">This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</string>
    <string name="l8">Children’s Privacy</string>
    <string name="i8">These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.</string>
    <string name="l9">Changes to This Privacy Policy</string>
    <string name="i9">I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page.

This policy is effective as of 2020-05-01</string>
    <string name="login">LOGIN</string>
    <string name="email_address">Email Address</string>
    <string name="reset_password">Reset Password</string>
    <string name="create_account">Create Account</string>
    <string name="myhome">MyHome</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">SIGN-UP</string>
    <string name="by_narender_keswani">By Narender Keswani [18BSD021]</string>
    <string name="port_1">PORT 1</string>
    <string name="port_3">PORT 3</string>
    <string name="update">UPDATE</string>
    <string name="today_s_electricity_usage">Today\'s Electricity Usage</string>
    <string name="power_factor">POWER FACTOR</string>
    <string name="frequency_hz">FREQUENCY (Hz)</string>
    <string name="voltage_v">VOLTAGE (V)</string>
    <string name="current_a">CURRENT (A)</string>
    <string name="bill">BILL (₹)</string>
    <string name="energy_kwh">ENERGY (kWh)</string>
    <string name="power_w">POWER (W)</string>
    <string name="show_statistics">SHOW STATISTICS</string>
    <string name="this_month_electricity_usage">This Month Electricity Usage</string>
    <string name="_0_100">0-100</string>
    <string name="get_realtime_electricity_readings_with_statistics">Get realtime electricity readings with statistics.</string>
    <string name="check_indoor_realtime_weather_of_your_home">Check indoor realtime weather of your home.</string>
    <string name="make_your_plant_healthy_by_getting_plant_moisture_level">Make your plant healthy by getting plant moisture level.</string>
    <string name="get_the_real_time_water_level_readings">Get the real time water level readings.</string>
    <string name="integrated_with_goggle_assistant">Integrated with Goggle Assistant.</string>
</resources>
