<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".miscellaneous.PrivacyPolicyActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundColor1">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/pp_rep"
                app:cardBackgroundColor="@color/backgroundColor1"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:fontFamily="@font/mazzardm_semibolditalic"
                                android:gravity="start"
                                android:maxEms="16"
                                android:showText="true"
                                android:singleLine="false"
                                android:text="@string/i1"
                                android:textColor="@color/textColor"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:fontFamily="@font/mazzardm_semibolditalic"
                                android:gravity="center"
                                android:showText="true"
                                android:text="@string/l2"
                                android:textColor="@color/textColor"
                                android:textSize="22sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:fontFamily="@font/mazzardm_semibolditalic"
                                android:gravity="start"
                                android:maxEms="16"
                                android:showText="true"
                                android:singleLine="false"
                                android:text="@string/i2"
                                android:textColor="@color/textColor"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:fontFamily="@font/mazzardm_semibolditalic"
                                android:gravity="center"
                                android:showText="true"
                                android:text="@string/l3"
                                android:textColor="@color/textColor"
                                android:textSize="22sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:fontFamily="@font/mazzardm_semibolditalic"
                                android:gravity="start"
                                android:maxEms="16"
                                android:showText="true"
                                android:singleLine="false"
                                android:text="@string/i3"
                                android:textColor="@color/textColor"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:fontFamily="@font/mazzardm_semibolditalic"
                                android:gravity="center"
                                android:showText="true"
                                android:text="@string/l4"
                                android:textColor="@color/textColor"
                                android:textSize="22sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:fontFamily="@font/mazzardm_semibolditalic"
                                android:gravity="start"
                                android:maxEms="16"
                                android:showText="true"
                                android:singleLine="false"
                                android:text="@string/i4"
                                android:textColor="@color/textColor"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:fontFamily="@font/mazzardm_semibolditalic"
                                android:gravity="center"
                                android:showText="true"
                                android:text="@string/l5"
                                android:textColor="@color/textColor"
                                android:textSize="22sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:fontFamily="@font/mazzardm_semibolditalic"
                                android:gravity="start"
                                android:maxEms="16"
                                android:showText="true"
                                android:singleLine="false"
                                android:text="@string/i5"
                                android:textColor="@color/textColor"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:fontFamily="@font/mazzardm_semibolditalic"
                                android:gravity="center"
                                android:showText="true"
                                android:text="@string/l6"
                                android:textColor="@color/textColor"
                                android:textSize="22sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:fontFamily="@font/mazzardm_semibolditalic"
                                android:gravity="start"
                                android:maxEms="16"
                                android:showText="true"
                                android:singleLine="false"
                                android:text="@string/i6"
                                android:textColor="@color/textColor"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:fontFamily="@font/mazzardm_semibolditalic"
                                android:gravity="center"
                                android:showText="true"
                                android:text="@string/l7"
                                android:textColor="@color/textColor"
                                android:textSize="22sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:fontFamily="@font/mazzardm_semibolditalic"
                                android:gravity="start"
                                android:maxEms="16"
                                android:showText="true"
                                android:singleLine="false"
                                android:text="@string/i7"
                                android:textColor="@color/textColor"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:fontFamily="@font/mazzardm_semibolditalic"
                                android:gravity="center"
                                android:showText="true"
                                android:text="@string/l8"
                                android:textColor="@color/textColor"
                                android:textSize="22sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:fontFamily="@font/mazzardm_semibolditalic"
                                android:gravity="start"
                                android:maxEms="16"
                                android:showText="true"
                                android:singleLine="false"
                                android:text="@string/i8"
                                android:textColor="@color/textColor"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:fontFamily="@font/mazzardm_semibolditalic"
                                android:gravity="center"
                                android:showText="true"
                                android:text="@string/l9"
                                android:textColor="@color/textColor"
                                android:textSize="22sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:fontFamily="@font/mazzardm_semibolditalic"
                                android:gravity="start"
                                android:maxEms="16"
                                android:showText="true"
                                android:singleLine="false"
                                android:text="@string/i9"
                                android:textColor="@color/textColor"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/pp_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/mazzardm_semibolditalic"
                android:gravity="center"
                android:showText="true"
                android:text="@string/privacypolicy"
                android:textColor="@color/textColor"
                android:textSize="28sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/pp_rep"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_240sdp"
                android:layout_below="@+id/pp_text"
                android:src="@drawable/ppimg"/>

        </RelativeLayout>
    </ScrollView>