<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".maincontroller.BottomNavBarActivity"
    tools:showIn="@layout/app_bar_default">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/backgroundColor1"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_view_linear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:background="@color/backgroundColor1" />
    </FrameLayout>

    <com.gauravk.bubblenavigation.BubbleNavigationLinearView
        android:id="@+id/bottom_navigation_view_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor1"
        android:elevation="8dp"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/l_item_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_active="true"
            app:bt_colorActive="@color/red_active"
            app:bt_colorInactive="@color/red_inactive"
            app:bt_icon="@drawable/ic_home"
            app:bt_shape="@drawable/transition_background_drawable_home"
            app:bt_title="@string/home" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/l_item_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_colorActive="@color/blue_active"
            app:bt_colorInactive="@color/blue_inactive"
            app:bt_icon="@mipmap/raindrop"
            app:bt_shape="@drawable/transition_background_drawable_raindrop"
            app:bt_title="@string/water" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/l_item_elect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_colorActive="@color/yellow_active"
            app:bt_colorInactive="@color/yellow"
            app:bt_icon="@mipmap/elect"
            app:bt_shape="@drawable/transition_background_drawable_elect"
            app:bt_title="@string/electricity" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/l_item_leaf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_colorActive="@color/green_active"
            app:bt_colorInactive="@color/green_active"
            app:bt_icon="@mipmap/leaf"
            app:bt_shape="@drawable/transition_background_drawable_leaf"
            app:bt_title="@string/plant" />

    </com.gauravk.bubblenavigation.BubbleNavigationLinearView>

</androidx.constraintlayout.widget.ConstraintLayout>