<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor1"
    tools:context=".authentication.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/mazzardhmediumitalic"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_240sdp"
            android:src="@drawable/signup" />

            <EditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:backgroundTint="@color/textColor"
                android:drawableStart="@mipmap/user"
                android:drawablePadding="16dp"
                android:hint="@string/full_name"
                android:inputType="text"
                android:maxLength="30"
                android:maxLines="1"
                android:padding="16dp"
                android:shadowColor="@color/textColor"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:backgroundTint="@color/textColor"
                android:drawableStart="@mipmap/email"
                android:drawablePadding="16dp"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:maxLines="1"
                android:padding="16dp"
                android:shadowColor="@color/textColor"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:backgroundTint="@color/textColor"
                android:drawableStart="@mipmap/phone"
                android:drawablePadding="16dp"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:maxLength="30"
                android:maxLines="1"
                android:padding="16dp"
                android:shadowColor="@color/textColor"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shadowColor="@color/textColor"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/textColor"
            app:passwordToggleDrawable="@drawable/ic_visibility_black_18dp">

            <EditText
                android:id="@+id/reg_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:backgroundTint="@color/backgroundColor1"
                android:drawableStart="@mipmap/lock"
                android:drawablePadding="16dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="16dp"
                android:shadowColor="@color/textColor"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <soup.neumorphism.NeumorphButton
            android:id="@+id/create_acc"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edit_style"
            android:fontFamily="@font/mazzardhblackitalic"
            android:text="@string/create_account"
            android:textColor="@color/backgroundColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:neumorph_backgroundColor="@color/textColor"
            app:neumorph_shadowElevation="6dp"
            app:neumorph_shadowColorLight="@color/strokecol"
            app:neumorph_shadowColorDark="@color/strokecol"
            app:neumorph_shapeAppearance="@style/CustomShapeAppearance"
            app:neumorph_shapeType="flat"
            app:neumorph_strokeWidth="18dp" />

        <soup.neumorphism.NeumorphButton
            android:id="@+id/loginbtn"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/mazzardhblackitalic"
            android:text="@string/login"
            android:textColor="@color/backgroundColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:neumorph_backgroundColor="@color/textColor"
            app:neumorph_shadowElevation="6dp"
            app:neumorph_shadowColorLight="@color/strokecol"
            app:neumorph_shadowColorDark="@color/strokecol"
            app:neumorph_shapeAppearance="@style/CustomShapeAppearance"
            app:neumorph_shapeType="flat"
            app:neumorph_strokeWidth="18dp" />

    </LinearLayout>
</ScrollView>
